# app/Http/Controllers/Search/SearchController.php
@@ -6,6 +6,7 @@ use App\Exceptions\ApiException;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Api\CatalogListRequest;
 use App\Search\Query\Request\Elasticsearch;
+use SwaggerUnAuth\Model\Engine;
 use SwaggerUnAuth\Model\Filter;
 
 class SearchController extends Controller
@@ -13,6 +14,7 @@ class SearchController extends Controller
     /**
      * @param CatalogListRequest $request
      * @return \SwaggerUnAuth\Model\ListItem[]
+     * @throws ApiException
      */
     public function catalogList(CatalogListRequest $request)
     {
@@ -20,6 +22,11 @@ class SearchController extends Controller
          * @var Filter $filter
          */
         $filter = $request->getValid('filter');
+        /**
+         * @var Engine $engine
+         */
+        $engine = $request->getValid('engine');
+        print_r($engine->getName());
         $items = null;
         switch ($request->get('engine')) {
             case 'elasticsearch': { // TODO: ИИ
